@@ -5,7 +5,7 @@
  * 
  * (c) Copyright 2003, 2004, 2005, 2006 Hewlett-Packard Development Company, LP
  * [See end of file]
- * $Id: TestTypedLiterals.java,v 1.56 2006-08-23 13:19:06 andy_seaborne Exp $
+ * $Id: TestTypedLiterals.java,v 1.57 2006-08-31 09:55:35 der Exp $
  *****************************************************************/
 package com.hp.hpl.jena.graph.test;
 
@@ -34,7 +34,7 @@ import org.apache.xerces.impl.dv.util.HexBin;
  * TypeMapper and LiteralLabel.
  * 
  * @author <a href="mailto:der@hplb.hpl.hp.com">Dave Reynolds</a>
- * @version $Revision: 1.56 $ on $Date: 2006-08-23 13:19:06 $
+ * @version $Revision: 1.57 $ on $Date: 2006-08-31 09:55:35 $
  */
 public class TestTypedLiterals extends TestCase {
               
@@ -468,6 +468,14 @@ public class TestTypedLiterals extends TestCase {
         assertEquals("serialization", "P1Y2M3DT5H6M7.5S", l1.getValue().toString());
         assertTrue("equality test", l1.sameValueAs( m.createTypedLiteral("P1Y2M3DT5H6M7.5S", XSDDatatype.XSDduration) ) );
         assertTrue("inequality test", l1 != m.createTypedLiteral("P1Y2M2DT5H6M7.5S", XSDDatatype.XSDduration));
+
+        l1 = m.createTypedLiteral("P1Y", XSDDatatype.XSDduration);
+        assertEquals("duration data type", XSDDatatype.XSDduration, l1.getDatatype());
+        assertEquals("duration java type", XSDDuration.class, l1.getValue().getClass());
+        assertEquals("duration value", 1, ((XSDDuration)l1.getValue()).getYears());
+        assertEquals("serialization", "P1Y", l1.getValue().toString());
+        assertTrue("equality test", l1.sameValueAs( m.createTypedLiteral("P1Y", XSDDatatype.XSDduration) ) );
+        assertTrue("inequality test", l1 != m.createTypedLiteral("P1Y", XSDDatatype.XSDduration));
 
         
         // dateTime
